added board, win check and redraw board

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,4 +5,6 @@ html
 		link(rel='stylesheet', href='/main.css')
 	body
 		h1 Ticky Tacky Toe
+		.board
+		script(src='/socket.io/socket.io.js')
 		script(src='/main.js')
