--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ html
 		link(rel='stylesheet', href='/main.css')
 	body
 		h1 Ticky Tacky Toe
+		.status
 		.board
 		script(src='/socket.io/socket.io.js')
 		script(src='/main.js')
