--- a/views/home.pug
+++ b/views/home.pug
@@ -5,9 +5,8 @@ html
 		link(rel='stylesheet', href='/main.css')
 	body
 		h1 Ticky Tacky Toe
-
-		h2 Select a game
-		ul
-			for game in games
-				li: a(href=`/game/${game._id}`) Game: #{game._id}
+		.create
+			a(href='/game/create') Start New Game
+		.join
+			a(href='/game') Join a game
 
